--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/images/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/src/assets/images/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/src/assets/images/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/src/assets/images/favicon/site.webmanifest">
     <link href="src/style/output.css" rel="stylesheet">
-    <title>Vite App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <title>Kiosek</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="font-default">
+    <div
+      id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
